// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a TV show card as expected 1`] = `
<div>
  <div
    class="show-card"
  >
    <div
      class="top-wrapper"
    >
      <div
        class="img-wrapper"
      >
        <img
          alt="The Big Bang Theory"
          src="https://image.tmdb.org/t/p/w220_and_h330_face/ooBGRQBdbGzBxAVfExiO8r7kloA.jpg"
        />
      </div>
      <div
        class="text-wrapper"
      >
        <h3>
          The Big Bang Theory
        </h3>
        <p
          class="date"
        >
           
          Sep 24 2007
           
        </p>
      </div>
    </div>
    <div
      class="rating-wrapper"
    >
      <div
        class="icon"
      >
        <img
          alt="tv"
          src="https://img.icons8.com/android/20/000000/retro-tv.png"
        />
      </div>
      <div
        class="react-rater"
      >
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active-half"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled"
          >
            ★
          </div>
        </div>
      </div>
      <p
        class="rating"
      >
        7.6
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a movie show card as expected 1`] = `
<div>
  <div
    class="show-card"
  >
    <div
      class="top-wrapper"
    >
      <div
        class="img-wrapper"
      >
        <img
          alt="Harry Potter and the Philosopher's Stone"
          src="https://image.tmdb.org/t/p/w220_and_h330_face/wuMc08IPKEatf9rnMNXvIDxqP4W.jpg"
        />
      </div>
      <div
        class="text-wrapper"
      >
        <h3>
          Harry Potter and the Philosopher's Stone
        </h3>
        <p
          class="date"
        >
           
          Nov 16 2001
           
        </p>
      </div>
    </div>
    <div
      class="rating-wrapper"
    >
      <div
        class="icon"
      >
        <img
          alt="movie"
          src="https://img.icons8.com/ios-filled/20/000000/movie.png"
        />
      </div>
      <div
        class="react-rater"
      >
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled is-active-half"
          >
            ★
          </div>
        </div>
        <div>
          <div
            class="react-rater-star is-disabled"
          >
            ★
          </div>
        </div>
      </div>
      <p
        class="rating"
      >
        7.9
      </p>
    </div>
  </div>
</div>
`;
